<resources>
    <string name="live_app_running">Running</string>
    <string name="live_anchor_audience_list_panel_title">Online audience</string>
    <string name="live_start_live">Go live</string>
    <string name="live_edit_cover">Modify the cover</string>
    <string name="live_stream_categories">Live type:</string>
    <string name="live_stream_privacy_status">Live Mode:</string>
    <string name="live_stream_categories_default">Daily chat</string>
    <string name="live_stream_privacy_status_default">Public</string>
    <string name="live_stream_privacy_status_privacy">Privacy</string>
    <string name="live_titile_preset_cover">Preset Images</string>
    <string name="live_set_as_cover">Set as cover</string>
    <string name="live_set_as_background">Set as background</string>
    <string name="live_follow_anchor">Follow</string>
    <string name="live_unfollow_anchor">Unfollow</string>
    <string name="live_room_info_liveroom_id">Live Room ID:</string>
    <string name="live_link_mic_manager">Link Management</string>
    <string name="live_connection">Co-host</string>
    <string name="live_disconnection">Disconnect</string>
    <string name="live_hang_up">Hang Up</string>
    <string name="live_accept">Accept</string>
    <string name="live_reject">Reject</string>
    <string name="live_receive">Accept</string>
    <string name="live_start_connection">Invite</string>
    <string name="live_disconnect_tips">Are you sure you want to disconnect from other streamers?</string>
    <string name="live_disconnect_cancel">Cancel</string>
    <string name="live_end_connect">Disconnect</string>
    <string name="live_connect_inviting">Waiting</string>
    <string name="live_connect_error">Other errors, cannot connect.</string>
    <string name="live_connect_conflict">The room you are invited to connect to is connected to another room.</string>
    <string name="live_connection_room_full">The number of co-hosting has exceeded the maximum limit.</string>
    <string name="live_connect_request_rejected">Connection application has been rejected</string>
    <string name="live_end_link">End Co-guest</string>
    <string name="live_anchor_end_link_tips">You are currently co-guesting with other streamers. Would you like to [End Live] ?</string>
    <string name="live_audience_end_link_tips">You are currently co-guesting with other streamers. Would you like to [End Co-guest] or [End Live] ?</string>
    <string name="live_end_live">End Live</string>
    <string name="live_end_pk_tips">You are currently in PK mode. Would you like to  [End PK] or [End Live] ?</string>
    <string name="live_end_pk">End PK</string>
    <string name="live_end_connection_tips">You are currently co-hosting with other streamers. Would you like to [End Co-host] or [End Live] ?</string>
    <string name="live_end_connection">End Co-host</string>
    <string name="live_connect_inviting_append">invite you to host together</string>
    <string name="live_enable_audience_request_link">Allow viewers to apply for continuous microphone</string>
    <string name="live_seat_list_title">Current Mic (%1$d/%2$d)</string>
    <string name="live_connection_list_title">Connecting Streamers(%1$d)</string>
    <string name="live_seat_application_title">Link Application(%1$d)</string>
    <string name="live_recommended_list">Suggested Hosts</string>
    <string name="live_mute_audio">Mute</string>
    <string name="live_unmute_audio">Unmute</string>
    <string name="live_start_video">Start Video</string>
    <string name="live_stop_video">Stop Video</string>
    <string name="live_enable_audio">Enable Audio</string>
    <string name="live_disable_audio">Disable Audio</string>
    <string name="live_disable_video">Disable Video</string>
    <string name="live_enable_video">Enable Video</string>
    <string name="live_fan_count">Fans</string>
    <string name="live_disable_message">Disable chat</string>
    <string name="live_enable_message">Enable chat</string>
    <string name="live_kick_out_of_room">Remove</string>
    <string name="live_send_message_disabled">You have been muted in the current room</string>
    <string name="live_send_message_enable">You have been unmuted in the current room</string>
    <string name="live_terminate_room_connection_message">Are you sure you want to disconnect?</string>
    <string name="live_kick_user_confirm_message">Are you sure you want to remove \"%s\"?</string>
    <string name="live_mute_audio_by_master">The anchor has muted you</string>
    <string name="live_un_mute_audio_by_master">The anchor has unmuted you</string>
    <string name="live_mute_video_by_owner">The anchor disabled your video</string>
    <string name="live_un_mute_video_by_master">The anchor enabled your video</string>
    <string name="live_kicked_out_of_room_by_owner">You have been kicked out of the room by the anchor</string>
    <string name="live_title_link_mic_selector">Choose Link Mode</string>
    <string name="live_text_link_mic_selector">connect upon host\'s approval</string>
    <string name="live_text_link_mic_video">Apply for video link</string>
    <string name="live_text_link_mic_audio">Apply for audio link</string>
    <string name="live_text_cancel_link_mic_apply">Cancel application for link mic</string>
    <string name="live_text_close_link_mic">End Link</string>
    <string name="live_title_link_video_settings">Adjust the video link screen</string>
    <string name="live_apply_link_mic">Apply for link mic</string>
    <string name="live_tips_apply_link_mic">The screen effect will automatically take effect after connecting</string>
    <string name="live_video_settings_item_beauty">Beauty</string>
    <string name="live_video_settings_item_mirror">Mirror</string>
    <string name="live_video_settings_item_flip">Flip</string>
    <string name="live_settings_bg_image">Background</string>
    <string name="live_beauty_panel_title">One-click beauty</string>
    <string name="live_beauty_item_close">Close</string>
    <string name="live_beauty_item_smooth">Microdermabrasion</string>
    <string name="live_beauty_item_whiteness">Whitening</string>
    <string name="live_beauty_item_ruddy">Rosy</string>
    <string name="live_toast_apply_link_mic">You have submitted a link mic request, please wait for the author approval</string>
    <string name="live_settings">Settings</string>
    <string name="live_audio_effect">Audio</string>
    <string name="live_more_settings">More settings</string>
    <string name="live_video_params">Video Config</string>
    <string name="live_video_config">Video</string>
    <string name="live_waiting_pass">Waiting</string>
    <string name="live_gift_title">Gift</string>
    <string name="live_cancel">Cancel</string>
    <string name="live_live_has_stop">Live broadcast has ended</string>
    <string name="live_sent">Sent</string>
    <string name="live_entered_room">Entered room</string>
    <string name="live_audience_count_in_room">%1$d people viewed</string>
    <string name="live_room_destroy">Broadcast has been ended</string>
    <string name="live_loading">Loading...</string>
    <string name="live_no_more_data">There is no more data</string>
    <string name="live_no_room_tip">Please start a live room</string>
    <string name="live_exit_float_window_tip">It\'s live, please try again later.</string>
    <string name="live_battle_wait_start">Waiting for battle</string>
    <string name="live_battle_wait_stop">Cancel</string>
    <string name="live_battle_inviting">invite you to battle together</string>
    <string name="live_battle_invitation_timeout">Battle request has been timeout</string>
    <string name="live_battle_inviter_cancel">canceled battle, please try to initiate it again</string>
    <string name="live_battle_invitee_reject">rejected battle</string>
    <string name="live_battle_connecting">Connecting</string>
    <string name="live_battle_end_pk">End PK</string>
    <string name="live_battle_pk_end">PK End</string>
    <string name="live_battle_end_pk_tips">Are you sure you want to end the battle? The current result will be the final result after the end</string>
    <string name="live_common_this_live_data">Live data</string>
    <string name="live_common_live_duration">Duration</string>
    <string name="live_common_gift_income">Gift Income</string>
    <string name="live_common_live_people_number">Total Views</string>
    <string name="live_common_message_count">Messages</string>
    <string name="live_common_send_gift_people_count">Gift givers</string>
    <string name="live_common_like_count">Likes count</string>
    <string name="live_voiceroom_lock">Lock Seat</string>
    <string name="live_voiceroom_unlock">Unlock Seat</string>
    <string name="live_voiceroom_mute_seat">Mute</string>
    <string name="live_voiceroom_unmuted_seat">Unmute</string>
    <string name="live_voiceroom_take_seat">Take Seat</string>
    <string name="live_voiceroom_take_seat_rejected">Take seat application has been rejected</string>
    <string name="live_voiceroom_take_seat_timeout">Take seat application timeout</string>
    <string name="live_voiceroom_kicked_out_of_seat">Kicked out of seat by room owner</string>
    <string name="live_voiceroom_need_agree">Require owner\'s consent to speak</string>
    <string name="live_voiceroom_invite_seat_canceled">Seat invitation has been canceled</string>
    <string name="live_voiceroom_invite">Invite</string>
    <string name="live_voiceroom_receive_seat_invitation">%1$s invites you to take seat</string>
    <string name="live_voiceroom_empty_view">No users in the seat, go to invite</string>
    <string name="live_end_user">End</string>
    <string name="live_user_id">ID: %1$s</string>
    <string name="live_client_error_success">Operation Successful</string>
    <string name="live_client_error_failed">Temporarily Unclassified General Error</string>
    <string name="live_client_error_freq_limit">Request Rate Limited, Please Try Again Later</string>
    <string name="live_client_error_repeat_operation">Repeat Operation</string>
    <string name="live_client_error_sdk_app_id_not_found">Not Found SDKAppID, Please Confirm Application Info in TRTC Console</string>
    <string name="live_client_error_invalid_parameter">Passing illegal parameters when calling API, check if the parameters are legal</string>
    <string name="live_client_error_sdk_not_initialized">Not Logged In, Please Call Login API</string>
    <string name="live_client_error_permission_denied">Failed to Obtain Permission, Unauthorized Audio/Video Permission, Please Check if Device Permission is Enabled</string>
    <string name="live_client_error_require_payment">This feature requires an additional package. Please activate the corresponding package as needed in the TRTC Console</string>
    <string name="live_client_error_camera_start_fail">System Issue, Failed to Open Camera. Check if Camera Device is Normal</string>
    <string name="live_client_error_camera_not_authorized">Camera has No System Authorization, Check System Authorization</string>
    <string name="live_client_error_camera_occupied">Camera is Occupied, Check if Other Process is Using Camera</string>
    <string name="live_resolution_360p">360p</string>
    <string name="live_resolution_540p">540p</string>
    <string name="live_resolution_720p">720p</string>
    <string name="live_resolution_1080p">1080p</string>
    <string name="live_dashboard_video_fps">Video FPS</string>
    <string name="live_dashboard_video_resolution">Resolution</string>
    <string name="live_dashboard_video_bitrate">Video Bitrate</string>
    <string name="live_dashboard_audio_bitrate">Audio Bitrate</string>
    <string name="live_dashboard_video_info_title">Video Information</string>
    <string name="live_dashboard_audio_info_title">Audio Information</string>
    <string name="live_dashboard_stream_type">StreamType</string>
    <string name="live_dashboard_audio_sample_rate">Audio Sample Rate</string>
</resources>