<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/livekit_stream_dashboard_dialog_bg"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/livekit_design_standard_g7"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/live_dashboard_video_info_title"
            android:textColor="@color/livekit_design_standard_g7"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/livekit_stream_dashboard_dialog_bg"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_dashboard_video_resolution"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_video_resolution"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="10dp"
                android:background="@color/livekit_not_standard_separator_67" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_dashboard_video_bitrate"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_video_bitrate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="10dp"
                android:background="@color/livekit_not_standard_separator_67" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_dashboard_video_fps"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_video_fps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_dashboard_stream_type"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/live_dashboard_audio_info_title"
            android:textColor="@color/livekit_design_standard_g7"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/livekit_stream_dashboard_dialog_bg"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_dashboard_audio_sample_rate"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_audio_sample_rate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="13dp"
                android:background="@color/livekit_not_standard_separator_67" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/live_dashboard_audio_bitrate"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_audio_bitrate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/livekit_design_standard_g7"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />
</LinearLayout>