<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/livekit_design_standard_g2">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/livekit_top_btn_size"
        android:layout_height="@dimen/livekit_top_btn_size"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/livekit_ic_audience_exit"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/live_live_has_stop"
        android:textColor="@color/livekit_design_standard_flowkit_white"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/livekit_live_end_data_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/live_common_this_live_data"
            android:textColor="@color/livekit_design_standard_flowkit_white"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/livekit_design_standard_flowkit_white"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/live_common_live_duration"
                    android:textColor="@color/livekit_design_standard_g5"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_viewers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/livekit_design_standard_flowkit_white"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/live_common_live_people_number"
                    android:textColor="@color/livekit_design_standard_g5"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/livekit_design_standard_flowkit_white"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/live_common_message_count"
                    android:textColor="@color/livekit_design_standard_g5"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_gift_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/livekit_design_standard_flowkit_white"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/live_common_gift_income"
                    android:textColor="@color/livekit_design_standard_g5"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_gift_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/livekit_design_standard_flowkit_white"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/live_common_send_gift_people_count"
                    android:textColor="@color/livekit_design_standard_g5"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/livekit_design_standard_flowkit_white"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/live_common_like_count"
                    android:textColor="@color/livekit_design_standard_g5"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>